removed unwanted logs